Fine tune about-slideshow

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
       <div class="grid__col--12">
         <a href="index.html">
           <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-            I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
+          I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
         </a>
       </div>
     </header>
@@ -164,7 +164,7 @@
         </div>
       </article>
 
-      <article id="slideshow" class="grid looper">
+      <article class="grid looper slideshow">
         <input type="radio" name="slides" checked="checked" id="slides_1">
         <input type="radio" name="slides" id="slides_2">
         <input type="radio" name="slides" id="slides_3">
@@ -197,7 +197,7 @@
               <h2 class="headline-secondary--grouped">I have Experience in life</h2>
               <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
               Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
-              Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!  <br>
+              Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!<br>
               LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
             </header>
           </li>
@@ -205,22 +205,12 @@
           <li class="overscroll">
             <header class="panel--centered">
               <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
-              <span class="grid__col--12">
-                <h3>Digital</h3>
-                <p class="para-primary">
-                  Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework
-                </p>
-
-                <h3>Physical</h3>
-                <p class="para-primary">
-                  Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered
-                </p>
-
-                <h3>Other</h3>
-                <p class="para-primary">
-                  Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff
-                </p>
-              </span>
+              <h3 class="headline-tertiary">Digital</h3>
+              <p class="para-primary">Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework</p>
+              <h3 class="headline-tertiary">Physical</h3>
+              <p class="para-primary">Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered</p>
+              <h3 class="headline-tertiary">Other</h3>
+              <p class="para-primary">Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff</p>
             </header>
           </li>
 
