--- a/flyer.html
+++ b/flyer.html
@@ -96,7 +96,7 @@
       <div class="grid__col--12">
         <a href="index.html">
           <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-            I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
+          I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
         </a>
       </div>
     </header>
@@ -146,10 +146,9 @@
         <header class="grid__col--12 panel--centered">
           <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
           <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
-            Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
-            Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
+          Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
+          Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
         </header>
-        <span></span>
       </article>
     </section>
 
@@ -165,11 +164,11 @@
 
         <span class="grid__col--6">
           <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
-            I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
-            Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
-            I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
-            I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
-            I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
+          I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
+          Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
+          I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
+          I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
+          I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
         </span>
       </article>
     </section>
@@ -184,7 +183,7 @@
         <span class="grid__col--6">
           <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
           Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
-          Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!  <br>
+          Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!<br>
           LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
         </span>
 
@@ -201,22 +200,12 @@
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
-          <span class="grid__col--12">
-            <h3>Digital</h3>
-            <p class="para-primary">
-              Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework
-            </p>
-
-            <h3>Physical</h3>
-            <p class="para-primary">
-              Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered
-            </p>
-
-            <h3>Other</h3>
-            <p class="para-primary">
-              Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff
-            </p>
-          </span>
+          <h3 class="headline-tertiary">Digital</h3>
+          <p class="para-primary">Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework</p>
+          <h3 class="headline-tertiary">Physical</h3>
+          <p class="para-primary">Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered</p>
+          <h3 class="headline-tertiary">Other</h3>
+          <p class="para-primary">Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff</p>
         </header>
       </article>
     </section>
