Begin proper layout of projects.html, add elevator.js file

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
       <div class="grid__col--12">
         <a href="index.html">
           <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-          I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
+          I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
         </a>
       </div>
     </header>
@@ -213,8 +213,8 @@
               <p class="para-primary">Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff</p>
             </header>
           </li>
-
         </ul>
+
         <div class="side-scroller is-displayed-mobile">
           <label for="slides_1" class="arrow"></label>
           <label for="slides_2" class="arrow"></label>
