--- a/flyer.html
+++ b/flyer.html
@@ -96,7 +96,7 @@
       <div class="grid__col--12">
         <a href="index.html">
           <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-          I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
+          I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
         </a>
       </div>
     </header>
@@ -213,10 +213,12 @@
     <!-- Projects -->
     <section id="projects" class="layer--zero">
       <article class="grid">
-        <header class="panel--centered">
+        <header class="grid__col--12 panel--centered">
           <h2 class="headline-secondary--grouped">Projects</h2>
         </header>
+      </article>
 
+      <article class="grid">
         <span class="grid__col--12">
           <span class="grid__col--12 panel--centered">
             <article class="grid__col--4">
@@ -240,7 +242,7 @@
 
           <ul class="grid__col--12 panel">
             <li>
-              <form action="index.html#projects">
+              <form action="projects.html">
                 <input type="submit" value="Projects Page" class="btn--un">
               </form>
               <!-- <a href="#" class="button">Projects Page</a> -->
