--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="grid__col--12">
         <a href="index.html">
           <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-          I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
+          I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
         </a>
       </div>
     </header>
@@ -141,7 +141,7 @@
     </aside>
 
     <!-- Main -->
-    <main role="main"></main>
+    <main role="main" class="grid grid__col--12 panel--centered"></main>
 
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
