--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
       <div class="grid__col--12">
         <a href="index.html">
           <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-          I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
+          I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
         </a>
       </div>
     </header>
@@ -140,45 +140,52 @@
       </nav>
     </aside>
 
+
+
+
     <!-- Projects page -->
     <section id="projects-page" class="layer--zero">
       <article class="grid">
-        <header class="panel--centered">
+        <header class="grid__col--12 panel--centered">
           <h2 class="headline-secondary--grouped">Projects</h2>
         </header>
+      </article>
 
-        <span class="grid__col--12">
-          <span class="grid__col--12 panel--centered">
-            <article class="grid__col--4">
-              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
-              <h3>Project One</h3>
-              <p class="para-primary">And we will never be alone again, 'Cause it doesn't happen every day</p>
-            </article>
-
-            <article class="grid__col--4">
-              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_05.jpg" alt=""></a>
-              <h3>Project Two</h3>
-              <p class="para-primary">Kinda counted on you being a friend, Can I give it up or give it away</p>
-            </article>
-
-            <article class="grid__col--4">
-              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_06.jpg" alt=""></a>
-              <h3>Project Three</h3>
-              <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
-            </article>
+      <article class="grid project-shwcse">
+        <div class="grid__col--4">
+          <span>
+            <img class="img--project-mnr img--wrap" src="public/images/projects/ourhouse/OurHouse-320x320.png" alt="Our House">
           </span>
+        </div>
 
-          <ul class="grid__col--12 panel">
-            <li>
-              <form action="index.html#projects">
-                <input type="submit" value="Projects Page" class="btn--un">
-              </form>
-              <!-- <a href="#" class="button">Projects Page</a> -->
-            </li>
-          </ul>
-        </span>
+        <div class="grid__col--8">
+          <h3 class="headline-tertiary">OurHouse</h3>
+          <p class="para-primary">A mobile app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.<br><br>
+          <strong>Front-End:</strong> AngularJS, Ionic mobile framework, HTML5, CSS3, JavaScript, jQuery<br>
+          <strong>Back-End:</strong> Ruby on Rails<br>
+          <strong>Additional:</strong> Decoupled architechture, Auth0, Google+ API, Venmo API</p>
+        </div>
+      </article>
+
+      <article class="grid project-shwcse">
+        <div class="grid__col--4">
+          <span>
+            <img class="img--project-mnr img--wrap" src="public/images/projects/suitandcape/SuitAndCape-320x320.png" alt="Suit And Cape Dot Com">
+          </span>
+        </div>
+
+        <div class="grid__col--8">
+          <h3 class="headline-tertiary">SuitAndCape</h3>
+          <p class="para-primary">A mobile app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.<br><br>
+          <strong>Front-End:</strong> HTML5, CSS3, Sass (SMACSS), JavaScript, jQuery, AJAX<br>
+          <strong>Additional:</strong> Decoupled architechture, Auth0, Google+ API, Venmo API</p>
+          <strong>Future Features:</strong> Handlebars.js, RequireJS, Underscore.js, Elevator.js<br>
+        </div>
       </article>
     </section>
+
+
+
 
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
