Implement vital Elevator.js feature on flyer.html

--- a/projects.html
+++ b/projects.html
@@ -161,9 +161,9 @@
         <div class="grid__col--8">
           <h3 class="headline-tertiary">OurHouse</h3>
           <p class="para-primary">A mobile app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.<br><br>
-          <strong>Front-End:</strong> AngularJS, Ionic mobile framework, HTML5, CSS3, JavaScript, jQuery<br>
+          <strong>Front-End:</strong> AngularJS, Ionic Mobile Framework, HTML5, CSS3, JavaScript, jQuery<br>
           <strong>Back-End:</strong> Ruby on Rails<br>
-          <strong>Additional:</strong> Decoupled architechture, Auth0, Google+ API, Venmo API</p>
+          <strong>Additional:</strong> Decoupled Architechture, Auth0, Google+ API, Venmo API</p>
         </div>
       </article>
 
@@ -176,10 +176,10 @@
 
         <div class="grid__col--8">
           <h3 class="headline-tertiary">SuitAndCape</h3>
-          <p class="para-primary">A mobile app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.<br><br>
-          <strong>Front-End:</strong> HTML5, CSS3, Sass (SMACSS), JavaScript, jQuery, AJAX<br>
-          <strong>Additional:</strong> Decoupled architechture, Auth0, Google+ API, Venmo API</p>
-          <strong>Future Features:</strong> Handlebars.js, RequireJS, Underscore.js, Elevator.js<br>
+          <p class="para-primary">My website, portfolio, and playground.  You can use this very site to get to know me, see what I've built, and connect with me.  Or you could just keep playing with the icon at the bottom of my Flyer page.<br><br>
+          <strong>Front-End:</strong> HTML5, CSS3, Sass (SMACSS), JavaScript, jQuery, AJAX, Handlebars.js<br>
+          <strong>Additional:</strong> Mobile-First Design, Responsive Design, Elevator.js</p>
+          <strong>Future Features:</strong> RequireJS, Underscore.js<br>
         </div>
       </article>
     </section>
