Fix SuitAndCape project summary goof

--- a/projects.html
+++ b/projects.html
@@ -178,8 +178,8 @@
           <h3 class="headline-tertiary">SuitAndCape</h3>
           <p class="para-primary">My website, portfolio, and playground.  You can use this very site to get to know me, see what I've built, and connect with me.  Or you could just keep playing with the icon at the bottom of my Flyer page.<br><br>
           <strong>Front-End:</strong> HTML5, CSS3, Sass (SMACSS), JavaScript, jQuery, AJAX, Handlebars.js<br>
-          <strong>Additional:</strong> Mobile-First Design, Responsive Design, Elevator.js</p>
-          <strong>Future Features:</strong> RequireJS, Underscore.js<br>
+          <strong>Additional:</strong> Mobile-First Design, Responsive Design, Elevator.js<br>
+          <strong>Future Features:</strong> RequireJS, Underscore.js</p>
         </div>
       </article>
     </section>
