Refine response of projects.html

--- a/flyer.html
+++ b/flyer.html
@@ -213,7 +213,7 @@
     <!-- Projects -->
     <section id="projects" class="layer--zero">
       <article class="grid">
-        <header class="grid__col--12 panel--centered">
+        <header class="panel--centered">
           <h2 class="headline-secondary--grouped">Projects</h2>
         </header>
       </article>
