--- a/projects.html
+++ b/projects.html
@@ -151,14 +151,14 @@
         </header>
       </article>
 
-      <article class="grid project-shwcse">
+      <article class="grid project-display">
         <div class="grid__col--4">
           <span>
-            <img class="img--project-mnr img--wrap" src="public/images/projects/ourhouse/OurHouse-320x320.png" alt="Our House">
+            <img class="img--project-preview img--wrap" src="public/images/projects/ourhouse/OurHouse-320x320.png" alt="Our House">
           </span>
         </div>
 
-        <div class="grid__col--8">
+        <div class="grid__col--8 project-summary">
           <h3 class="headline-tertiary">OurHouse</h3>
           <p class="para-primary">A mobile app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.<br><br>
           <strong>Front-End:</strong> AngularJS, Ionic Mobile Framework, HTML5, CSS3, JavaScript, jQuery<br>
@@ -166,18 +166,19 @@
           <strong>Additional:</strong> Decoupled Architechture, Auth0, Google+ API, Venmo API</p>
         </div>
       </article>
+      <span class="nth-piece is-displayed-mobile"></span>
 
-      <article class="grid project-shwcse">
+      <article class="grid project-display">
         <div class="grid__col--4">
           <span>
-            <img class="img--project-mnr img--wrap" src="public/images/projects/suitandcape/SuitAndCape-320x320.png" alt="Suit And Cape Dot Com">
+            <img class="img--project-preview img--wrap" src="public/images/projects/suitandcape/SuitAndCape-320x320.png" alt="Suit And Cape Dot Com">
           </span>
         </div>
 
-        <div class="grid__col--8">
+        <div class="grid__col--8 project-summary">
           <h3 class="headline-tertiary">SuitAndCape</h3>
           <p class="para-primary">My website, portfolio, and playground.  You can use this very site to get to know me, see what I've built, and connect with me.  Or you could just keep playing with the icon at the bottom of my Flyer page.<br><br>
-          <strong>Front-End:</strong> HTML5, CSS3, Sass (SMACSS), JavaScript, jQuery, AJAX, Handlebars.js<br>
+          <strong>Front-End:</strong> HTML5, CSS3, Sass (SMACSS), JavaScript, jQuery, Handlebars.js<br>
           <strong>Additional:</strong> Mobile-First Design, Responsive Design, Elevator.js<br>
           <strong>Future Features:</strong> RequireJS, Underscore.js</p>
         </div>
