Mess with design

--- a/flyer.html
+++ b/flyer.html
@@ -174,7 +174,7 @@
     </section>
 
     <!-- Experience -->
-    <section id="experience" class="layer--zero">
+    <section id="experience" class="layer--deux">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">I have Experience in life</h2>
@@ -196,7 +196,7 @@
     </section>
 
     <!-- Tools -->
-    <section id="tools" class="layer--un">
+    <section id="tools" class="layer--trois">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
@@ -211,7 +211,7 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="layer--zero">
+    <section id="projects" class="layer--quatre">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">Projects</h2>
