Deal with responsive font sizes

--- a/about.html
+++ b/about.html
@@ -92,11 +92,11 @@
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
     <!-- Banner -->
-    <header role="banner" id="banner" class="grid panel--main">
+    <header role="banner" id="banner" class="grid panel--main--centered">
       <div class="grid__col--12">
         <a href="index.html">
-          <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-          I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
+          <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.</h1>
+          <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
         </a>
       </div>
     </header>
