Make some design decisions, choose background color, keep normalize in play

--- a/flyer.html
+++ b/flyer.html
@@ -141,7 +141,8 @@
     </aside>
 
     <!-- Blurb -->
-    <section id="blurb" class="layer--zero">
+    <main class="layer-gradient--to-b">
+    <section id="blurb">
       <article class="grid">
         <header class="grid__col--12 panel--centered">
           <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
@@ -153,7 +154,7 @@
     </section>
 
     <!-- Personal -->
-    <section id="personal" class="layer--un">
+    <section id="personal">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">About me as a person</h2>
@@ -174,7 +175,7 @@
     </section>
 
     <!-- Experience -->
-    <section id="experience" class="layer--deux">
+    <section id="experience">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">I have Experience in life</h2>
@@ -189,14 +190,14 @@
 
         <span class="grid__col--5">
           <span>
-            <img class="img--avatar img--wrap" src="public/images/ali/long_cape.jpg" alt="">
+            <img class="img--avatar" src="public/images/ali/SuitAndCape_Headshot-640x640.jpg" alt="">
           </span>
         </span>
       </article>
     </section>
 
     <!-- Tools -->
-    <section id="tools" class="layer--trois">
+    <section id="tools">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
@@ -211,7 +212,7 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="layer--quatre">
+    <section id="projects">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">Projects</h2>
@@ -251,7 +252,7 @@
         </span>
       </article>
     </section>
-
+    </main>
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
       <article class="grid">
