--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
 
 
     <!-- Projects page -->
-    <section id="projects-page" class="layer--zero">
+    <section id="projects-page" class="layer-gradient--to-b">
       <article class="grid">
         <header class="grid__col--12 panel--centered">
           <h2 class="headline-secondary--grouped">Projects</h2>
