--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
     </aside>
 
     <!-- About -->
-    <section id="about" class="layer--zero">
+    <section id="about" class="layer-gradient--to-b">
 
       <!-- About navigation -->
       <article class="grid about-nav">
