Refactor colors, layers, and gradient

--- a/about.html
+++ b/about.html
@@ -146,19 +146,19 @@
       <!-- About navigation -->
       <article class="grid about-nav">
         <div class="grid__col--12 panel--centered">
-          <form class="btn--un is-collapsed-mobile">
+          <form class="btn--default is-collapsed-mobile">
             <label for="slides_1">Blurb</label>
           </form>
-          <form class="btn--un is-collapsed-mobile">
+          <form class="btn--default is-collapsed-mobile">
             <label for="slides_2">Personal</label>
           </form>
-          <form class="btn--un is-collapsed-mobile">
+          <form class="btn--default is-collapsed-mobile">
             <label for="slides_3">Experience</label>
           </form>
-          <form class="btn--un is-collapsed-mobile">
+          <form class="btn--default is-collapsed-mobile">
             <label for="slides_4">Tools</label>
           </form>
-          <!-- <form class="btn--un is-collapsed-mobile">
+          <!-- <form class="btn--default is-collapsed-mobile">
             <label for="slides_5">Gallery</label>
           </form> -->
         </div>
