--- a/flyer.html
+++ b/flyer.html
@@ -244,7 +244,7 @@
           <ul class="grid__col--12 panel">
             <li>
               <form action="projects.html">
-                <input type="submit" value="Projects Page" class="btn--un">
+                <input type="submit" value="Projects Page" class="btn--default">
               </form>
               <!-- <a href="#" class="button">Projects Page</a> -->
             </li>
