--- a/about.html
+++ b/about.html
@@ -146,16 +146,16 @@
       <!-- About navigation -->
       <article class="grid about-nav">
         <div class="grid__col--12 panel--centered">
-          <form class="btn--default is-collapsed-mobile">
+          <form class="btn--warning is-collapsed-mobile">
             <label for="slides_1">Blurb</label>
           </form>
-          <form class="btn--default is-collapsed-mobile">
+          <form class="btn--warning is-collapsed-mobile">
             <label for="slides_2">Personal</label>
           </form>
-          <form class="btn--default is-collapsed-mobile">
+          <form class="btn--warning is-collapsed-mobile">
             <label for="slides_3">Experience</label>
           </form>
-          <form class="btn--default is-collapsed-mobile">
+          <form class="btn--warning is-collapsed-mobile">
             <label for="slides_4">Tools</label>
           </form>
           <!-- <form class="btn--default is-collapsed-mobile">
