DRY radio buttons (about page) and standard button type (flyer page)

--- a/flyer.html
+++ b/flyer.html
@@ -221,6 +221,15 @@
 
       <article class="grid">
         <span class="grid__col--12">
+          <ul class="grid__col--12 panel--centered">
+            <li>
+              <form action="projects.html">
+                <input type="submit" value="Projects Page" class="btn--warning">
+              </form>
+              <!-- <a href="#" class="button">Projects Page</a> -->
+            </li>
+          </ul>
+
           <span class="grid__col--12 panel--centered">
             <article class="grid__col--4">
               <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
@@ -240,15 +249,6 @@
               <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
             </article>
           </span>
-
-          <ul class="grid__col--12 panel">
-            <li>
-              <form action="projects.html">
-                <input type="submit" value="Projects Page" class="btn--warning">
-              </form>
-              <!-- <a href="#" class="button">Projects Page</a> -->
-            </li>
-          </ul>
         </span>
       </article>
     </section>
