--- a/about.html
+++ b/about.html
@@ -146,21 +146,23 @@
       <!-- About navigation -->
       <article class="grid about-nav">
         <div class="grid__col--12 panel--centered">
-          <form class="btn--warning is-collapsed-mobile">
+<!--           <form class="rdo--warning is-collapsed-mobile">
             <label for="slides_1">Blurb</label>
           </form>
-          <form class="btn--warning is-collapsed-mobile">
+          <form class="rdo--warning is-collapsed-mobile">
             <label for="slides_2">Personal</label>
           </form>
-          <form class="btn--warning is-collapsed-mobile">
+          <form class="rdo--warning is-collapsed-mobile">
             <label for="slides_3">Experience</label>
           </form>
-          <form class="btn--warning is-collapsed-mobile">
+          <form class="rdo--warning is-collapsed-mobile">
             <label for="slides_4">Tools</label>
-          </form>
-          <!-- <form class="btn--default is-collapsed-mobile">
-            <label for="slides_5">Gallery</label>
           </form> -->
+          <label for="slides_1" class="rdo--warning is-collapsed-mobile">Blurb</label>
+          <label for="slides_2" class="rdo--warning is-collapsed-mobile">Personal</label>
+          <label for="slides_3" class="rdo--warning is-collapsed-mobile">Experience</label>
+          <label for="slides_4" class="rdo--warning is-collapsed-mobile">Tools</label>
+          <!-- <label for="slides_5"  class="rdo--warning is-collapsed-mobile">Gallery</label> -->
         </div>
       </article>
 
