Animate projects button on Flyer

--- a/flyer.html
+++ b/flyer.html
@@ -224,7 +224,7 @@
           <ul class="grid__col--12 panel--centered">
             <li>
               <form action="projects.html">
-                <input type="submit" value="Projects Page" class="btn--warning">
+                <input type="submit" value="Projects Page" class="btn--info bump">
               </form>
               <!-- <a href="#" class="button">Projects Page</a> -->
             </li>
